@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.568.2.38 2010/11/12 19:34:39 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.568.2.39 2010/11/29 05:42:56 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -3203,7 +3203,7 @@ Ffigure_lines
 ?style lp
 ?linespoints
 ?lp
-=pointinterval
+?pointinterval
 Ffigure_linespoints
  The `linespoints` style connects adjacent points with straight line segments
  and then goes back to draw a small symbol at each point.  The command
