@@ -1,3 +1,9 @@
+2010-11-28  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/gadgets.c src/gadgets.h src/graphics.c demo/dashcolor.dem:
+	Fix breakage to the pointinterval property.
+	Add a demo plot illustrating pointinterval.
+
 2010-11-23  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/js/gnuplot_common.js:  Rotated text should be zoomed also.
